--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
         <link rel='stylesheet' href="js/libs/reveal.js/css/reveal.css">
         <link rel='stylesheet' href="js/libs/reveal.js/css/theme/league.css" id='theme'>
          <script src='js/libs/reveal.js/js/reveal.js'></script>
-        <script src='js/libs/reveal.js/lib/js/head.min.js'></script>
+   <!--     <script src='js/libs/reveal.js/lib/js/head.min.js'></script> -->
         
     </head>
     <body>
